--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,36 @@
 exclude: ".*/vendor/.*"
 repos:
     - repo: https://github.com/pre-commit/mirrors-isort
-      rev: v4.3.15
+      rev: v4.3.17
       hooks:
           - id: isort
-    - repo: https://github.com/ambv/black
-      rev: 18.9b0
-      hooks:
-          - id: black
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.1.0
+      rev: v2.2.1
       hooks:
+          - id: check-added-large-files
+            args: ["--maxkb=128"]
+          - id: check-ast
           - id: check-byte-order-marker
-          - id: trailing-whitespace
-          - id: mixed-line-ending
-            args: ["--fix=lf"]
-          - id: check-merge-conflict
+          - id: check-case-conflict
+          - id: check-docstring-first
+          - id: check-executables-have-shebangs
           - id: check-json
+          - id: check-merge-conflict
+          - id: check-symlinks
+          - id: check-xml
           - id: check-yaml
+          - id: debug-statements
           - id: detect-aws-credentials
             args: ["--allow-missing-credentials"]
           - id: detect-private-key
+          - id: end-of-file-fixer
+          - id: mixed-line-ending
+            args: ["--fix=lf"]
           - id: pretty-format-json
             args: ["--autofix", "--no-sort-keys", "--indent=4"]
+          - id: trailing-whitespace
     - repo: https://github.com/prettier/prettier
-      rev: 1.16.2
+      rev: 1.17.0
       hooks:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
@@ -40,3 +46,8 @@ repos:
       rev: 3.7.7
       hooks:
           - id: flake8
+            additional_dependencies:
+                - flake8-assertive
+                - flake8-builtins
+                - flake8-comprehensions
+                - flake8-logging-format
