Apache: tune mod_wsgi settings
The values specified previously worked out to potentially very large numbers of database connections (784 = 768 (24 * 32) + 16) and memory any
time the server was under load. Anything I/O latency increases would translate into an increased number of running instances, potentially hitting swapping and/or the database’s maximum number of connections.

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -1,7 +1,7 @@
 WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam/
-WSGIDaemonProcess chronam-wsgi-app processes=24 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
-WSGIDaemonProcess chronam-wsgi-images processes=16 threads=1 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
+WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
+WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
 
 WSGIProcessGroup chronam-wsgi-app
 <LocationMatch "/lccn/.*jpg$">
