--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -1,7 +1,7 @@
 WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam/
-WSGIDaemonProcess chronam-wsgi-app processes=24 threads=32 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
-WSGIDaemonProcess chronam-wsgi-images processes=16 threads=1 maximum-requests=0 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
+WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
+WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
 
 WSGIProcessGroup chronam-wsgi-app
 <LocationMatch "/lccn/.*jpg$">
