Apache: set WSGIRestrictEmbedded On
The prevents any requests from being served in a non-daemon process, which is already our default:

https://modwsgi.readthedocs.io/en/develop/configuration-directives/WSGIRestrictEmbedded.html

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -2,8 +2,9 @@ WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam/
 WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
 WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
-
+WSGIRestrictEmbedded On
 WSGIProcessGroup chronam-wsgi-app
+
 <LocationMatch "/lccn/.*jpg$">
     WSGIProcessGroup chronam-wsgi-images
 </LocationMatch>
