--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -2,8 +2,9 @@ WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam/
 WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
 WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
-
+WSGIRestrictEmbedded On
 WSGIProcessGroup chronam-wsgi-app
+
 <LocationMatch "/lccn/.*jpg$">
     WSGIProcessGroup chronam-wsgi-images
 </LocationMatch>
