--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -1,7 +1,7 @@
 WSGIPythonHome /opt/chronam/ENV
 WSGISocketPrefix /opt/chronam/
-WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
-WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
+WSGIDaemonProcess chronam-wsgi-app processes=32 threads=4 request-timeout=120 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-app
+WSGIDaemonProcess chronam-wsgi-images processes=16 threads=2 request-timeout=120 python-eggs=/opt/chronam/.python-eggs display-name=chronam-wsgi-images
 WSGIRestrictEmbedded On
 WSGIProcessGroup chronam-wsgi-app
 
