Avoid more HTTP downgrades

--- a/conf/chronam-apache2_4.conf
+++ b/conf/chronam-apache2_4.conf
@@ -76,7 +76,7 @@ AddEncoding x-gzip .gz
 
     RewriteEngine on
 
-    RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
+    RewriteRule ^/share/(.*) https://loc.gov/share/$1 [P]
 
     RewriteRule ^/data/(.+)/(.+)sample(.+) - [F]
 
