--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -22,7 +22,7 @@ XSendFilePath /srv/chronam
 
 RewriteEngine  on
 
-RewriteRule ^/share/(.*) http://loc.gov/share/$1 [P]
+RewriteRule ^/share/(.*) https://loc.gov/share/$1 [P]
 
 RewriteRule ^/data/(.+)/(.+)sample(.+) - [F]
 
