--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       hooks:
           - id: isort
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.2.3
+      rev: v2.5.0
       hooks:
           - id: check-added-large-files
             args: ["--maxkb=128"]
@@ -30,12 +30,12 @@ repos:
             args: ["--autofix", "--no-sort-keys", "--indent=4"]
           - id: trailing-whitespace
     - repo: https://github.com/prettier/prettier
-      rev: 1.18.2
+      rev: 1.19.1
       hooks:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v6.0.1
+      rev: v7.0.0-alpha.0
       hooks:
           - id: eslint
             additional_dependencies:
@@ -43,7 +43,7 @@ repos:
                 - eslint-plugin-prettier@3.0.0
                 - prettier@1.14.3
     - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.7.8
+      rev: 3.7.9
       hooks:
           - id: flake8
             additional_dependencies:
