Update pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 exclude: ".*/vendor/.*"
 repos:
     - repo: https://github.com/pre-commit/mirrors-isort
-      rev: v4.3.21
+      rev: v5.6.4
       hooks:
           - id: isort
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v2.5.0
+      rev: v3.3.0
       hooks:
           - id: check-added-large-files
             args: ["--maxkb=128"]
@@ -30,12 +30,12 @@ repos:
             args: ["--autofix", "--no-sort-keys", "--indent=4"]
           - id: trailing-whitespace
     - repo: https://github.com/prettier/prettier
-      rev: 2.0.4
+      rev: 2.1.2
       hooks:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v6.8.0
+      rev: v7.13.0-1
       hooks:
           - id: eslint
             additional_dependencies:
@@ -43,7 +43,7 @@ repos:
                 - eslint-plugin-prettier@3.1.0
                 - prettier@1.18.2
     - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.7.9
+      rev: 3.8.4
       hooks:
           - id: flake8
             additional_dependencies:
