--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 exclude: ".*/vendor/.*"
 repos:
     - repo: https://github.com/pre-commit/mirrors-isort
-      rev: v5.6.4
+      rev: v5.8.0
       hooks:
           - id: isort
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.3.0
+      rev: v3.4.0
       hooks:
           - id: check-added-large-files
             args: ["--maxkb=128"]
@@ -29,13 +29,13 @@ repos:
           - id: pretty-format-json
             args: ["--autofix", "--no-sort-keys", "--indent=4"]
           - id: trailing-whitespace
-    - repo: https://github.com/prettier/prettier
-      rev: 2.1.2
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: v2.2.1
       hooks:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v7.13.0-1
+      rev: v7.25.0
       hooks:
           - id: eslint
             additional_dependencies:
@@ -43,7 +43,7 @@ repos:
                 - eslint-plugin-prettier@3.1.0
                 - prettier@1.18.2
     - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.8.4
+      rev: 3.9.1
       hooks:
           - id: flake8
             additional_dependencies:
