fix typo in conf/chronam.conf

--- a/conf/chronam.conf
+++ b/conf/chronam.conf
@@ -112,5 +112,5 @@ AliasMatch ^/media/(.*)$ /opt/chronam/.static-media/$1
 </Directory>
 <VirtualHost *:80>
     CustomLog "|$/sbin/runuser ndnp -c /usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).access.log 86400" combined
-    ErrorLog "|$/sbin.runuser ndnp -c /usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
+    ErrorLog "|$/sbin/runuser ndnp -c /usr/sbin/rotatelogs -f /var/log/httpd/chronam.%Y%m%d.$(hostname --fqdn).error.log 86400"
 </VirtualHost>
