--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,10 @@ repos:
       rev: v5.10.1
       hooks:
           - id: isort
+    - repo: https://github.com/psf/black
+      rev: 22.1.0
+      hooks:
+          - id: black
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.1.0
       hooks:
@@ -35,7 +39,7 @@ repos:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v8.7.0
+      rev: v8.8.0
       hooks:
           - id: eslint
             additional_dependencies:
