Update flake8 pre-commit hook source

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
                 - eslint@5.16.0
                 - eslint-plugin-prettier@3.1.0
                 - prettier@1.18.2
-    - repo: https://gitlab.com/pycqa/flake8
+    - repo: https://github.com/pycqa/flake8
       rev: 3.9.2
       hooks:
           - id: flake8
