--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,15 @@
-exclude: ".*/vendor/.*"
+exclude: ".*(/vendor/|[.]min[.]).*"
 repos:
     - repo: https://github.com/pre-commit/mirrors-isort
       rev: v5.10.1
       hooks:
           - id: isort
     - repo: https://github.com/psf/black
-      rev: 22.3.0
+      rev: 23.1.0
       hooks:
           - id: black
     - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v4.2.0
+      rev: v4.4.0
       hooks:
           - id: check-added-large-files
             args: ["--maxkb=128"]
@@ -34,12 +34,12 @@ repos:
             args: ["--autofix", "--no-sort-keys", "--indent=4"]
           - id: trailing-whitespace
     - repo: https://github.com/pre-commit/mirrors-prettier
-      rev: v2.6.2
+      rev: v2.7.1
       hooks:
           - id: prettier
             files: \.(css|less|scss|ts|tsx|graphql|gql|json|js|jsx|md)$
     - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: v8.15.0
+      rev: v8.33.0
       hooks:
           - id: eslint
             additional_dependencies:
@@ -47,7 +47,7 @@ repos:
                 - eslint-plugin-prettier@3.1.0
                 - prettier@1.18.2
     - repo: https://github.com/pycqa/flake8
-      rev: 3.9.2
+      rev: 6.0.0
       hooks:
           - id: flake8
             additional_dependencies:
