Add --no-skip-essays flag

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,3 +55,4 @@ repos:
                 - flake8-builtins
                 - flake8-comprehensions
                 - flake8-logging-format
+                - setuptools
